set(TILESET_HEADERS
    Dimension.hpp
    Insets.hpp)

set(TILESET_SOURCES
    Dimension.cpp
    Insets.cpp)

if (TILESET_BUILD_SHARED)
    add_library(${CMAKE_PROJECT_NAME} SHARED ${TILESET_SOURCES})
    set_target_properties(${CMAKE_PROJECT_NAME} PROPERTIES SOVERSION ${PROJECT_VERSION_MAJOR} VERSION ${PROJECT_VERSION})

    install(TARGETS ${CMAKE_PROJECT_NAME} LIBRARY DESTINATION ${LIB_INSTALL_DIR} COMPONENT libraries)
endif ()

if (TILESET_BUILD_STATIC)
    add_library(${CMAKE_PROJECT_NAME}-static STATIC ${TILESET_SOURCES})
    set_target_properties(${CMAKE_PROJECT_NAME}-static PROPERTIES OUTPUT_NAME ${CMAKE_PROJECT_NAME})

    install(TARGETS ${CMAKE_PROJECT_NAME}-static ARCHIVE DESTINATION ${LIB_INSTALL_DIR} COMPONENT libraries)
endif ()

install(DIRECTORY ../include/zzbgames DESTINATION ${INCLUDE_INSTALL_DIR})
